--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,14 +1,15 @@
 name: Continuous Integration
 on:
   push:
-    branches: [master]
+    branches: [master, main]
   pull_request:
+  workflow_dispatch:
 jobs:
   ruby:
     strategy:
       fail-fast: false
       matrix:
-        ruby: [2.5, 2.6, 2.7]
+        ruby: [3.0, 3.1, 3.2, 3.3]
     runs-on: ubuntu-latest
     steps:
     - name: Checkout repository
