--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,15 +1,13 @@
-name: Continuous Integration
+name: Lint
 on:
   push:
     branches: [main]
   pull_request:
   workflow_dispatch:
 jobs:
-  ruby:
+  rubocop:
     strategy:
       fail-fast: false
-      matrix:
-        ruby: [3.0, 3.1, 3.2, 3.3]
     runs-on: ubuntu-latest
     steps:
     - name: Checkout repository
@@ -17,7 +15,7 @@ jobs:
     - name: Setup Ruby
       uses: ruby/setup-ruby@v1
       with:
-        ruby-version: ${{ matrix.ruby }}
+        ruby-version: '3.2'
     - name: Install dependencies
       run: bundle install
     - name: Run rubocop
